--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -17,10 +17,10 @@ Job Launches: {{launches}}
 {% if (is_root) %}
 <br>
 <div class="ui icon buttons">
-  <a class="ui button" href="set_job_launches/{{experiment}}/{{role}}?hold=hold">
+  <a class="ui button" href="set_job_launches/{{session_experiment}}/{{session_role}}?hold=hold">
     <i class="pause icon"></i>
   </a>
-  <a class="ui button" href="set_job_launches/{{experiment}}/{{role}}?hold=allowed">
+  <a class="ui button" href="set_job_launches/{{session_experiment}}/{{session_role}}?hold=allowed">
     <i class="play icon"></i>
   </a>
 </div>
