--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -85,8 +85,8 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                 <th data-sorter="false" data-filter="false">GUI Editor</th>
                 <th data-sorter="false" data-filter="false">Clone<br>Campaign</th>
                 <th data-sorter="false" data-filter="false">.ini File</th>
-                <th>Tags</th>
                 <th data-sorter="false" data-filter="false">Delete<br>Campaign</th>
+                <th>Tags</th>
                 <th>Creator</th>
             </tr>
         </thead>
@@ -116,9 +116,15 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                     </a>
                 </td>
                 <td>
+                  {%if data.authorized[loop.index0] %}
                     <button onclick="confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign/{{session_experiment}}/{{session_role}}?campaign_id={{s.campaign_id}}')">
                         <i class="chart rocket icon blue"></i>
                     </button>
+                  {%else%}
+                     <button type="button" class="disabled">
+                        <i class="chart rocket icon disabled"></i>
+                     </button>
+                  {%endif%}
                 </td>
                 <td>
                     <a href="{{pomspath}}/campaign_deps/{{session_experiment}}/{{session_role}}?campaign_name={{s.name|urlencode}}">
@@ -130,13 +136,13 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                 <td>
                     {%if data.authorized[loop.index0] %}
                     <a href="{{pomspath}}/gui_wf_edit/{{session_experiment}}/{{session_role}}?campaign={{s.name|urlencode}}">
-                        <button class="ui button blue">
-                            <i class="edit icon"></i>
+                        <button class="button">
+                            <i class="edit icon blue"></i>
                         </button>
                     </a>
                     {%else%}
-                        <button class="ui button disabled">
-                            <i class="edit icon"></i>
+                        <button class="button disabled">
+                            <i class="edit icon disabled"></i>
                         </button>
                     {%endif%}
                 </td>
@@ -153,20 +159,20 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                     </a>
                 </td>
                 <td>
-                    {% for tag in s.tags %}
-                        {{tag.tag_name}}
-                    {% endfor %}
-                </td>
-                <td>
                     {%if data.authorized[loop.index0] %}
-                    <button class="ui button" onclick="delete_campaign('{{s.name}}', '{{s.campaign_id}}');">
+                    <button class="button" onclick="delete_campaign('{{s.name}}', '{{s.campaign_id}}');">
                         <i class="trash blue icon"></i>
                     </button>
                     {%else%}
-                        <button class="ui button disabled">
-                            <i class="trash icon"></i>
+                        <button class="button disabled">
+                            <i class="trash icon disabled"></i>
                         </button>
                     {%endif%}
+                </td>
+                <td>
+                    {% for tag in s.tags %}
+                        {{tag.tag_name}}
+                    {% endfor %}
                 </td>
                 <td>
                     {{s.experimenter_creator_obj.username}}
