--- a/webservice/templates/show_campaign_stages.html
+++ b/webservice/templates/show_campaign_stages.html
@@ -38,7 +38,8 @@ Campaign Stages {{ show_hint('#Campaigns-Stages', 'Campaigns Stages') }}
     }
 
     /* Hide the first column with IDs */
-    #campaign_stages th:nth-child(1), table td:nth-child(1) {
+    #campaign_stages th:nth-child(1),
+    #campaign_stages td:nth-child(1) {
         display: none;
     }
 
