--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -16,7 +16,8 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
 
 <style scoped>
     /* Hide the first column with IDs */
-    #campaign_table th:nth-child(1), table td:nth-child(1) {
+    #campaign_table th:nth-child(1),
+    #campaign_table td:nth-child(1) {
         display: none;
     }
 
