smoke testing modify_job_type_recoveries

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -48,16 +48,19 @@
     </div>
   </div>
 
-  {%if session_role == 'analysis' or session_role == 'superuser' %}
   <div class="item">
     <div class="header">User Data</div>
     <div class="menu">
+  {%if session_role == 'analysis' or session_role == 'superuser' %}
       <a class="item" href="{{pomspath}}/file_uploads/{{session_experiment}}/{{session_role}}/{{username}}">
         Uploaded Files
       </a>
+  {%endif%}
+      <a class="item" href="{{pomspath}}/held_launches/{{session_experiment}}/{{session_role}}">
+         Held Launches
+      </a>
      </div>
   </div>
-  {%endif%}
   <div class="item">
     <div class="header">Campaign Data</div>
     <div class="menu">
