make campaigns page scrollable

--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -68,7 +68,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
     </label>
 </form>
 
-<div>
+<div id="double-scroll" class="ui _scrollable">
     <table id="campaign_table" class="ui celled _table unstackable tablesorter tablesorter-ice">
         <thead>
             <tr>
