--- a/webservice/templates/login_setup_edit.html
+++ b/webservice/templates/login_setup_edit.html
@@ -122,7 +122,7 @@
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
-  <form id="template_add_edit_form" class="ui form" method="POST" action="login_setup_edit">
+  <form id="template_add_edit_form" class="ui form" method="POST" action="{{pomspath}}/login_setup_edit/{{session_experiment}}/{{session_role}}">
     <div class="four fields">
       <div class="field">
         <label>Name</label>
