--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -58,7 +58,7 @@ in Campaign <a href="{{pomspath}}/show_campaigns/{{session_experiment}}/{{sessio
 
 Submission was:
 {%if submission.recovery_tasks_parent %}
-a recovery launch for <a href="./submission_details/{{session_experiment}}/{{session_role}}?submission_id={{submission.recovery_tasks_parent}}">Submission #{{submission.recovery_tasks_parent}}</a>
+a recovery launch for <a href="{{pomspath}}/submission_details/{{session_experiment}}/{{session_role}}?submission_id={{submission.recovery_tasks_parent}}">Submission #{{submission.recovery_tasks_parent}}</a>
 {%else%}
 a regular launch
 {%endif%}
@@ -66,7 +66,7 @@ a regular launch
 
 {%if dataset %}
 {%if dataset[:13] == 'poms_depends_' %}
-...launched on completion of  <a href="./submission_details/{{session_experiment}}/{{session_role}}?submission_id={{dataset[13:-2]}}">Submission #{{dataset[13:-2]}}</a>
+...launched on completion of  <a href="{{pomspath}}/submission_details/{{session_experiment}}/{{session_role}}?submission_id={{dataset[13:-2]}}">Submission #{{dataset[13:-2]}}</a>
 {%endif%}
 {%endif%}
 
