small cleanups from production

--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -6,7 +6,9 @@
 {% endmacro %}
 
 {%block title%}
-POMS
+<meta http-equiv="Cache-Control" content="no-store" />
+<title>POMS</title>
+
 <script src="{{pomspath}}/static/js/json_field_editor.js"></script>
 <script src="{{pomspath}}/static/js/split_type_picker.js"></script>
 <script src="{{pomspath}}/split_type_javascript"></script>
