tweaks from production

--- a/webservice/templates/campaign_stage_submissions.html
+++ b/webservice/templates/campaign_stage_submissions.html
@@ -21,16 +21,12 @@ POMS:Campaign Stage Submissions
 
 
 {%block subheader%}
-Campaign:&nbsp;&nbsp; {{data.campaign_name}} <br>
-Campaign Stage:&nbsp;&nbsp; {{data.stage_name}}
+Campaign:&nbsp;&nbsp; {{campaign_name}} <br>
+Campaign Stage:&nbsp;&nbsp; {{stage_name}}
 {%endblock%}
 
 {%block content%}
 <!-- 
-data.depends:
-{{data.depends}}
-data.depth:
-{{data.depth}}
 -->
 <script>
  function confirm_call(msg, url) {
