--- a/webservice/templates/show_campaign_stages.html
+++ b/webservice/templates/show_campaign_stages.html
@@ -210,9 +210,9 @@ Campaign Stages {{ show_hint('#Campaigns-Stages', 'Campaigns Stages') }}
             }
         }
         if (csv_checked.length == 0) {
-            location.href = "{{pomspath}}/show_campaign_stages/{{session_experiment}}/{{session_role}}?cl=" + csv.join(',');
+            location.href = "{{pomspath}}/show_campaign_stages/{{session_experiment}}/{{session_role}}?campaign_ids=" + csv.join(',');
         } else {
-            location.href = "{{pomspath}}/show_campaign_stages/{{session_experiment}}/{{session_role}}?cl=?cl=" + csv_checked.join(',');
+            location.href = "{{pomspath}}/show_campaign_stages/{{session_experiment}}/{{session_role}}?campaign_ids=" + csv_checked.join(',');
         }
     }
   </script>
