--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -11,7 +11,7 @@
 {%set user_authorization=user_authorization_1|map('first') %}
 {%set maxrole=ctx.db.query(ExperimentsExperimenters.role).filter(ExperimentsExperimenters.experimenter_id == experimenter.experimenter_id, ExperimentsExperimenters.experiment == session_experiment).scalar()|default('analysis',true) %}
 {%set is_root=experimenter.root %}
-{%set experimenter_id=experimenter.id %}
+{%set experimenter_id=experimenter.experimenter_id %}
 {%set username=experimenter.username %}
 {%if is_root %}
 {%set rolenum=4 %}
