--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
 <!-- sets instead of old jinja globals
-{%set session_experiment=ctx.experiment %}
-{%set session_role=ctx.role %}
-{%set experimenter=ctx.get_experimenter() %}
-{%set first_name=experimenter.first_name %}
-{%set last_name=experimenter.last_name %}
+{%set session_experiment=ctx.experiment|default('unknown') %}
+{%set session_role=ctx.role|default('unknown') %}
+{%set experimenter=ctx.get_experimenter()|default('unknown') %}
+{%set first_name=experimenter.first_name|default('unknown') %}
+{%set last_name=experimenter.last_name|default('unknown') %}
 {%set user_authorization_1=ctx.db.query( ExperimentsExperimenters.experiment).filter(ExperimentsExperimenters.experimenter_id == experimenter.experimenter_id, ExperimentsExperimenters.active.is_(True)).all() %}
 {%set user_authorization=user_authorization_1|map('first') %}
 {%set maxrole=ctx.db.query(ExperimentsExperimenters.role).filter(ExperimentsExperimenters.experimenter_id == experimenter.experimenter_id, ExperimentsExperimenters.experiment == session_experiment).scalar()|default('analysis',true) %}
-{%set is_root=experimenter.root %}
-{%set experimenter_id=experimenter.experimenter_id %}
-{%set username=experimenter.username %}
+{%set is_root=experimenter.root|default(False) %}
+{%set experimenter_id=experimenter.experimenter_id|default(-1) %}
+{%set username=experimenter.username|default('unknown') %}
 {%if is_root %}
 {%set rolenum=4 %}
 {%else%}
