--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -72,6 +72,22 @@ a regular launch
 
 <br>
 
+{% if recovery_ids %}
+Recoveries launched: 
+{%for id in recovery_ids %}
+   <a href="{{pomspath}}/submission_details/{{session_experiment}}/{{session_role}}?submission_id={{id}}">Submission #{{id}}</a>
+{% endfor %}
+<br>
+{% endif %}
+
+{% if depend_ids %}
+Dependencies launched: 
+{%for id in depend_ids %}
+   <a href="{{pomspath}}/submission_details/{{session_experiment}}/{{session_role}}?submission_id={{id}}">Submission #{{id}}</a>
+{% endfor %}
+<br>
+{% endif %}
+
 {% if submission.jobsub_job_id %}
 {%set cluster=submission.jobsub_job_id[:submission.jobsub_job_id.find("@")] %}
 {%set schedd=submission.jobsub_job_id[submission.jobsub_job_id.find("@")+1:] %}
