everything is https now...

--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -273,7 +273,7 @@ Job Launches: {{launches}}
                 </div>
             </a>
             <div class="ui button"></div>
-            <a target="_blank" href="http://www.dcache.org">
+            <a target="_blank" href="https://www.dcache.org">
                 <div class="ui button">
                     Wiki
                 </div>
