--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -129,7 +129,7 @@ Landscape (disabled, no info found) <br>
 {%endif%}
 
 {%if submission.project %}
-View the <a href="http://samweb.fnal.gov:8480/station_monitor/{{session_experiment}}/stations/{{session_experiment}}/projects/{{submission.project}}">SAM Project</a> <br>
+View the <a href="https://samweb.fnal.gov:8483/station_monitor/{{session_experiment}}/stations/{{session_experiment}}/projects/{{submission.project}}">SAM Project</a> <br>
 {%endif%}
 
 {%if submission.jobsub_job_id %}
