service-now move to servicenowservices

--- a/webservice/templates/unauthorized_user.html
+++ b/webservice/templates/unauthorized_user.html
@@ -17,7 +17,7 @@
         If your account is not authorized to use POMS, to get access, do the following:
         <br>
         <ul>
-          <li>Open the webpage to <a href="https://fermi.service-now.com/wp" target="_blank">SNOW</a> and login.</li>
+          <li>Open the webpage to <a href="https://fermi.servicenowservices.com/wp" target="_blank">SNOW</a> and login.</li>
           <li>Select the tile "Request Something".</li>
           <li>Select the tile "Experiment/Project/Collaboration Computing Account".</li>
           <li>Choose your experiment.</li>
