--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -35,7 +35,7 @@
         <a class="item" href="{{exp_obj.logbook if exp_obj else '#'}}" target="_blank">{{session_experiment|capitalize}} Logbook</a>
     </div>
     <div class="menu">
-        <a class="item" href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar&sysparm_auto_request=true" target="_popup" >Downtime Calendar</a>
+        <a class="item" href="https://fermi.servicenowservices.com/home.do?sysparm_view=scd_outage_calendar&sysparm_auto_request=true" target="_popup" >Downtime Calendar</a>
     </div>
   </div>
 
