--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -149,7 +149,7 @@ Job Logs
 Hold Condor Jobs <a href="{{pomspath}}/kill_jobs/{{session_experiment}}/{{session_role}}?submission_id={{submission.submission_id}}&act=hold"><i class="pause icon"></i></a> <br>
 Release Condor Jobs <a href="{{pomspath}}/kill_jobs/{{session_experiment}}/{{session_role}}?submission_id={{submission.submission_id}}&act=release"><i class="play icon"></i></a> <br>
 Kill Condor Jobs <a href="{{pomspath}}/kill_jobs/{{session_experiment}}/{{session_role}}?submission_id={{submission.submission_id}}&act=kill"><i class="trash icon"></i></a> <br>
-Kick to Completed  <button onclick="confirm_call('Are you sure you want to mark this submission Completed?','{{pomspath}}/update_submission/{{session_experiment}}/{{session_role}}?status=Completed&jobsub_job_id={{submission.jobsub_job_id}}')"> <i class="ui forward icon "></i></button>&nbsp;
+Kick to Completed  <button onclick="confirm_call('Are you sure you want to mark this submission Completed?','{{pomspath}}/update_submission/{{session_experiment}}/{{session_role}}?status=Completed&submission_id={{submission.submission_id}}&jobsub_job_id={{submission.jobsub_job_id}}')"> <i class="ui forward icon "></i></button>&nbsp;
 {%elif history[-1].status_id == 7000 %}
 Hold Condor Jobs <i class="ui pause icon grey"></i>&nbsp;<br>
 Release Condor Jobs  <i class="ui play icon grey"></i>&nbsp;<br>
