--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -1,7 +1,7 @@
 {%extends "layout.html" %}
 
 {%block title%}
-<title>POMS Campaign Stage Dependencies</title>
+<title>POMS Campaign Overview</title>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.min.css" rel="stylesheet" type="text/css">
@@ -9,11 +9,7 @@
 
 {%block header%}
 <h1 class="ui header">
-          Campaign Stage Dependencies for Campaign {{tag}}
-
-          <div class="sub header">
-              see dependencies
-          </div>
+          Campaign Overview of Campaign {{tag}}
 </h1>
 {%endblock%}
 
