draft of fix for issue #26269

--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -225,7 +225,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
-    <form id="template_clone_form" class="ui form" method="GET" action="{{pomspath}}/gui_wf_edit/{{session_experiment}}/{{session_role}}?">
+    <form id="template_clone_form" class="ui form" method="GET" action="{{pomspath}}/gui_wf_clone/{{session_experiment}}/{{session_role}}?">
       <div class="two fields">
         <div class="field">
           <label>Existing Campaign Name</label>
