--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -212,6 +212,10 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                 </div>
             </div>
             <div class="field">
+                <div class="ui horizontal large label">remove crontabs</div>
+                <input type="checkbox" checked="true" class="ui checkbox" name="clear_cron" value="1">
+            </div>
+            <div class="field">
                 <input type="submit" class="ui teal button" name="Submit">
             </div>
             <div class="ui hidden divider"></div>
