--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -168,7 +168,7 @@ all the time...
              </div>
              {% else %}
              <div class=item>
-                 <a href="{{pomspath}}/mark_campaign_hold/{{session_experiment}}/{{session_role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Hold" 
+                 <a href="{{pomspath}}/mark_campaign_hold/{{session_experiment}}/{{session_role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Hold&clear_cron=True" 
                  >
                     <i class="sign in alternate icon" data-content="Queue Future Launches" data-variation="basic">
                     </i>Queue future job launches
