--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -173,7 +173,7 @@
 	{% include 'datepicker_block.html' %}
     {%endif%}
 	<div class="no example" style="margin: 0px 10px 0px 10px;">
-      {% if session_role == session_experiment or session_role not in ('production','analysis','superuser') %}
+      {% if session_role == session_experiment or session_role not in ('production','production-shifter','analysis','superuser') %}
          <div style="border: solid red 2px; width:50%; margin: 4em auto; padding: 4em;" > 
              
             URL error: 
